# bc-art

./: .gitignore  bc.py  pyproject.toml  readme.md
src/bc_art/: __init__.py
src/scratchpad/: __main__.py
