[project]
name = "bc-art"
version = "1.0.0"
dependencies = [
    "beautifulsoup4 >= 4.12",
    "filetype >= 1.0",
    "requests >= 2.31",
    "tqdm >= 4.66",
    "validator_collection >= 1.5"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
bc-art = "bc_art:main"
